--- a/structure.html
+++ b/structure.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Page title></title>
+        <title> Page title</title>
     </head>
     <body>
         <h1>This is a head</h1>
