--- a/headings.html
+++ b/headings.html
@@ -4,11 +4,11 @@
         <title> headings of html </title>
     </head>
     <body>
-        <h1>This is a heading</h1>
-        <h2>This is a heading</h2>
-        <h3>This is a heading</h3>
-        <h4>This is a heading</h4>
-        <h5>This is a heading</h5>
-        <h6>This is a heading</h6>
+        <h1>This is a heading tag</h1>
+        <h2>This is a heading tag</h2>
+        <h3>This is a heading tag</h3>
+        <h4>This is a heading tag</h4>
+        <h5>This is a heading tag</h5>
+        <h6>This is a heading tag</h6>
     </body>
 </html>
