--- a/signup page.html
+++ b/signup page.html
@@ -4,6 +4,7 @@
         <title>Signup page</title>
     </head>
     <body>
+        <form>
         <h1>SIGN UP PAGE</h1>
         <label>First name</label>
         <input type="text" placeholder ="eg., Rahul">
@@ -16,5 +17,6 @@
         <label>Mobile</label>
         <input type="tel" placeholder = "eg.,1234567891">
         <button>Submit</button>
+        </form>
     </body>
 </html>
