--- a/style.html
+++ b/style.html
@@ -1,12 +1,32 @@
+//style attribute for styling HTML attribute
+//background-color
+//color
+//font-family
+//font-size
+//text-align
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>style of html page</title>
 </head>
 <body>
+    <h1 style="background-color: powderblue;">this is heading</h1>
     <p> I am chethana</p>
     <p style="color:blue;">i love blue color</p>
     <p style="color:green;">i like green vegetables</p>
     <p style="font-size:30px;">i cook for myself</p>
+    <p style="background-color: brown;">this is a paragraph</p>
+
+    <h2 style="color:red;">text color is red</h2>
+    <p style="color:yellow;">this paragrph color is yellow</p>
+
+    <h3 style="font-family:sans-serif;">font family is sans-serif</h3>
+    <p style="font-family: courier;">this is a paragraph</p>
+
+    <h4 style="font-size:300%;">this is a heading</h4>
+    <p style="font-size:160%;">this is a paragraph</p>
+
+    <h5 style="text-align: center;">the heading is aligned at center</h5>
+    <p style="text-align:center;">the paragraph is aligned at center</p>
 </body>
 </html>
